crates/parser/src/snapshots/parser__tests__parse_array_assignment_with_destructuring.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
---
Root@0..20
  LetStatement@0..19
    Let@0..3 "let"
    Whitespace@3..4 " "
    ArrayPattern@4..11
      LeftBracket@4..5 "["
      Identifier@5..6 "x"
      Comma@6..7 ","
      Whitespace@7..8 " "
      Identifier@8..9 "y"
      RightBracket@9..10 "]"
      Whitespace@10..11 " "
    Equals@11..12 "="
    Whitespace@12..13 " "
    ArrayExpression@13..19
      LeftBracket@13..14 "["
      Number@14..15
        Number@14..15 "1"
      Comma@15..16 ","
      Whitespace@16..17 " "
      Number@17..18
        Number@17..18 "2"
      RightBracket@18..19 "]"
  Semicolon@19..20 ";"
