crates/parser/src/snapshots/parser__tests__parse_conditional_assignment.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "let x = if true { 1 } else { 2 }"
---
Root@0..32
  LetStatement@0..32
    Let@0..3 "let"
    Whitespace@3..4 " "
    Identifier@4..5 "x"
    Whitespace@5..6 " "
    Equals@6..7 "="
    Whitespace@7..8 " "
    ConditionalExpression@8..32
      If@8..10 "if"
      Whitespace@10..11 " "
      ConditionalPredicate@11..16
        Boolean@11..16
          Boolean@11..15 "true"
          Whitespace@15..16 " "
      IfCondition@16..22
        BlockExpression@16..22
          LeftBrace@16..17 "{"
          Whitespace@17..18 " "
          Number@18..20
            Number@18..19 "1"
            Whitespace@19..20 " "
          RightBrace@20..21 "}"
          Whitespace@21..22 " "
      Else@22..26 "else"
      Whitespace@26..27 " "
      ElseCondition@27..32
        BlockExpression@27..32
          LeftBrace@27..28 "{"
          Whitespace@28..29 " "
          Number@29..31
            Number@29..30 "2"
            Whitespace@30..31 " "
          RightBrace@31..32 "}"
