crates/parser/src/snapshots/parser__tests__parse_expression_with_many_different_precedences.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "-(x + -y * z - 1 / 2)"
---
Root@0..21
  UnaryExpression@0..21
    Minus@0..1 "-"
    ParenExpression@1..21
      LeftParenthesis@1..2 "("
      InfixExpression@2..20
        InfixExpression@2..13
          VariableReference@2..4
            Identifier@2..3 "x"
            Whitespace@3..4 " "
          Plus@4..5 "+"
          Whitespace@5..6 " "
          InfixExpression@6..13
            UnaryExpression@6..9
              Minus@6..7 "-"
              VariableReference@7..9
                Identifier@7..8 "y"
                Whitespace@8..9 " "
            Asterisk@9..10 "*"
            Whitespace@10..11 " "
            VariableReference@11..13
              Identifier@11..12 "z"
              Whitespace@12..13 " "
        Minus@13..14 "-"
        Whitespace@14..15 " "
        InfixExpression@15..20
          Number@15..17
            Number@15..16 "1"
            Whitespace@16..17 " "
          ForwardSlash@17..18 "/"
          Whitespace@18..19 " "
          Number@19..20
            Number@19..20 "2"
      RightParenthesis@20..21 ")"
